# RSA-Project

./: .gitignore  README.md  architectureRSA.drawio  test.json
DroneMission/: build_tracking_sensor.sh
Train/: augment.py  convert.py  train.py
YOLOStuff/: cameraDetection.py  requirements.txt
YOLOStuff/ROS/rosWay/: cameraDetection.py  fastdds.xlm  launch_tracking_sensor.sh  run.sh  tracking.py
YOLOStuff/ROS/rosWay/Para entregar/: cameraDetection.py  tracking.dockerfile  tracking.py
goal_remap_ws/: README.md  build.sh  run.sh
goal_remap_ws/src/goal_remap/: package.xml  setup.cfg  setup.py
goal_remap_ws/src/goal_remap/goal_remap/: goal_remapper.py
goal_remap_ws/src/goal_remap/install/: local_setup.sh  setup.sh
goal_remap_ws/src/goal_remap/install/goal_remap/lib/goal_remap/: goal_remapper
goal_remap_ws/src/goal_remap/install/goal_remap/share/goal_remap/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
goal_remap_ws/src/goal_remap/install/goal_remap/share/goal_remap/launch/: goal_remap.launch.py
goal_remap_ws/src/goal_remap/launch/: goal_remap.launch.py
goal_remap_ws/src/goal_remap/log/: latest_build
goal_remap_ws/src/goal_remap/src/goal_remap/config/: config.ini
goal_remapper_ws/: DENMexample.json  README.md  build.sh  run.sh  runAutoware.sh
goal_remapper_ws/goal_remapper/: package.xml  setup.cfg  setup.py
goal_remapper_ws/goal_remapper/goal_remapper/: goal_remapper_node.py
goal_remapper_ws/goal_remapper/launch/: goal_remapper_launch.py
mapa_rsa/: lanelet2_map.osm  map_config.yaml  map_projector_info.yaml
