<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goal_remapper</name>
  <version>0.0.1</version>
  <description>
    A ROS 2 package for remapping navigation goals in Autoware based on incoming MQTT messages.
    Supports custom goals and DENM-style messages with GPS to map conversion.
  </description>

  <maintainer email="ander5loure@gmail.com">pixkit</maintainer>
  <license>MIT</license>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- External Python dependency -->
  <exec_depend>paho-mqtt</exec_depend>

  <!-- Optional, if using launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
